[gd_scene load_steps=3 format=3 uid="uid://bb7jbbuaq8ich"]

[ext_resource type="Script" path="res://scripts/Main.gd" id="1_wuq2g"]
[ext_resource type="Texture2D" uid="uid://d3a8mqqjguyok" path="res://assets/images/01.png" id="2_nu2dp"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_wuq2g")

[node name="BG_ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.72549, 0.807843, 1, 1)

[node name="AnswersList" type="ItemList" parent="."]
visible = false
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -450.0
offset_top = -256.0
offset_right = 450.0
offset_bottom = -46.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 32
allow_reselect = true
item_count = 4
same_column_width = true
fixed_column_width = 500
item_0/text = "100000000000000000"
item_1/text = "2000000000000000000000000000000000000"
item_2/text = "30000000000000000000000000000000"
item_3/text = "40000000000000000000000000000"

[node name="RestartButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -100.0
offset_top = -385.0
offset_right = 100.0
offset_bottom = -345.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 30
text = "Restart"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -640.0
offset_top = 13.0
offset_right = 640.0
offset_bottom = 133.0
grow_horizontal = 2

[node name="QuestionTexts" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 32
text = "question texts"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="ImageRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -612.5
offset_top = 119.0
offset_right = 612.5
offset_bottom = 457.0
grow_horizontal = 2
texture = ExtResource("2_nu2dp")
expand_mode = 2
stretch_mode = 5

[node name="WrongNumber" type="Label" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -120.0
offset_top = -42.0
offset_right = 82.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(0.929412, 0, 0, 1)
theme_override_font_sizes/font_size = 28
text = "Wrong"

[node name="ScoreNumber" type="Label" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 25.0
offset_top = -43.0
offset_right = 214.0
offset_bottom = 5.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 28
text = "Score"

[node name="CorrectAnswer" type="Label" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -451.0
offset_top = -178.0
offset_right = 526.0
offset_bottom = -122.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(0.133333, 0.133333, 0.133333, 1)
theme_override_font_sizes/font_size = 32
text = "The correct answer is:"

[node name="OK" type="Button" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -84.0
offset_top = -128.0
offset_right = 92.0
offset_bottom = -78.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 30
text = "Okie, got it!"

[connection signal="item_selected" from="AnswersList" to="." method="_on_answers_list_item_selected"]
[connection signal="pressed" from="RestartButton" to="." method="_on_restart_button_pressed"]
[connection signal="pressed" from="OK" to="." method="_on_ok_pressed"]
